# project-dave

./: .env.example  .gitignore  .nuxtignore  CLAUDE.md  README.md  app.vue  index.html  nuxt.config.ts  package-lock.json  package.json  package_old.json  tailwind.config.js  tsconfig.json
.github/workflows/: build-release.yml  release.yml
assets/abi/: AutonomiPaymaster.json  Permit.json
assets/css/: main.css
components/: ContentContainer.vue  DialogConnectWallet.vue  DialogDisconnectWallet.vue  DialogInvoice.vue  DialogNotification.vue  DialogPaymasterGuide.vue  FileViewer.vue  Header.vue  PaymentDrawer.vue  PaymentOrders.vue  PaymentViewItem.vue  PaymentViewPay.vue  ThemeToggle.vue
components/Common/: Button.vue
components/Icon/: Files.vue  Logo.vue  LogoAlt.vue  Settings.vue  Wallet.vue
composables/: use-theme.ts
config/: index.ts  paymaster.ts
lib/: updater.ts
pages/: about-us.vue  downloader.vue  index.vue  nodes.vue  settings.vue  upload.vue  wallet.vue
plugins/: vue-query.ts  wagmi.ts
server/api/: files.get.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/ant/: app_data.rs  cached_payments.rs  client.rs  encryption.rs  files.rs  local_storage.rs  mod.rs  payments.rs  quote.rs  receipt_utils.rs  stream.rs  upload.rs  vault.rs
src/components/: ThemeToggle.vue
src/composables/: useTheme.ts
src/lib/: updater.ts
stores/: autonomi.ts  downloads.ts  files.ts  localFiles.ts  payments.ts  upload.ts  uploads.ts  user.ts  wallet.ts
types/: folder.ts  paymaster.ts  wallet.ts
utils/: balance.ts  date.ts  debounce.ts  permit.ts  smartAccount.ts
