[package]
name = "project-dave"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "project_dave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
autonomi = { git = "https://github.com/mickvandijke/autonomi", branch = "feat-pub-stream-encryption-methods" }
rand = "0.8.5"
dirs-next = "~2.0.0"
directories = "5.0"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-opener = "2.5.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
thiserror = "2.0.8"
toml = "0.8.19"
tokio = { version = "1.42.0", features = ["fs"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
walkdir = "2.5.0"
hex = "0.4"

[dev-dependencies]
tempfile = "3.20.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
